Solve overlapping problem

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -238,7 +238,7 @@ aside.home-liste-news ul li {
 	text-decoration: underline;
 }
 
-#rightside_wrapper {
+#main_wrapper {
 	overflow:scroll;
 }
 
